@@ -6,34 +6,38 @@ version = "1.0.0-SNAPSHOT"
 val basePackage = "io.zenwave360.examples.kotlin"
 val openApiApiPackage = "$basePackage.web"
 val openApiModelPackage = "$basePackage.web.dtos"
+
+val asyncApiInputSpec = "src/main/resources/public/apis/asyncapi.yml"
 val asyncApiModelPackage = "$basePackage.events.dtos"
 val asyncApiProducerApiPackage = "$basePackage.events"
 val asyncApiConsumerApiPackage = "$basePackage.commands"
-
-val zenwaveEventsExternalizerVersion = "1.0.2"
+val asyncApiAvroImports = "src/main/resources/public/apis/avro/"
 
 ext {
-    set("spring-cloud.version", "2025.0.0")
+    set("spring-cloud.version", "2025.1.0")
     set("spring-cloud-stream-schema.version", "2.2.1.RELEASE")
+    set("avro.version", "1.11.3")
     set("jakarta.validation-api.version", "3.1.1")
     set("mapstruct.version", "1.6.3")
     set("karate.version", "1.4.1")
-    set("archunit-junit5.version", "1.4.0")
+    set("testcontainers.version", "1.20.4")
+    set("archunit-junit5.version", "1.4.1")
     set("springdoc-openapi-starter-webmvc-ui.version", "2.8.3")
-    set("zenwave-events-externalizer.version", "1.0.2")
+    set("zenwave-events-externalizer.version", "1.1.0")
+    set("zenwave.version", "2.2.0")
 }
 
 plugins {
     java
-    val kotlinVersion = "2.2.0"
+    val kotlinVersion = "2.2.21"
     kotlin("plugin.spring") version kotlinVersion
     kotlin("plugin.serialization") version kotlinVersion
     kotlin("jvm") version kotlinVersion
     kotlin("kapt") version kotlinVersion
-    val springBootVersion = "3.5.3"
+    val springBootVersion = "4.0.0"
     id("org.springframework.boot") version springBootVersion
     id("io.spring.dependency-management") version "1.1.7"
-    id("org.openapi.generator") version "7.11.0"
+    id("org.openapi.generator") version "7.17.0"
     id("dev.jbang") version "0.3.0"
 }
 
@@ -46,15 +50,14 @@ java {
 repositories {
     mavenLocal()
     mavenCentral()
-    maven { url = uri("https://repo.spring.io/milestone") }
-    maven { url = uri("https://repo.spring.io/snapshot") }
+    maven { url = uri("https://packages.confluent.io/maven/") }
 }
 
 dependencyManagement {
     imports {
         mavenBom(org.springframework.boot.gradle.plugin.SpringBootPlugin.BOM_COORDINATES)
         mavenBom("org.springframework.cloud:spring-cloud-dependencies:${property("spring-cloud.version")}")
-        mavenBom("org.springframework.modulith:spring-modulith-bom:1.4.1")
+        mavenBom("org.springframework.modulith:spring-modulith-bom:2.0.0")
     }
 }
 
@@ -68,7 +71,7 @@ dependencies {
     implementation("org.springframework.boot:spring-boot-starter-web")
     implementation("org.springframework.boot:spring-boot-starter-security")
     implementation("org.springframework.boot:spring-boot-starter-actuator")
-    implementation("org.springframework.boot:spring-boot-starter-aop")
+    implementation("org.springframework.boot:spring-boot-starter-aspectj")
 
     // JPA
     testImplementation("org.hibernate.orm:hibernate-ant")
@@ -79,12 +82,13 @@ dependencies {
     implementation("org.springframework.cloud:spring-cloud-starter-stream-kafka")
     implementation("org.springframework.cloud:spring-cloud-stream-schema:${property("spring-cloud-stream-schema.version")}")
     implementation("io.confluent:kafka-avro-serializer:5.3.0")
-    implementation("org.apache.avro:avro:1.11.3")
+    implementation("org.apache.avro:avro:${property("avro.version")}")
     // transactional outbox with zenwave and spring-modulith
-    implementation("io.zenwave360.sdk:spring-modulith-events-scs:${zenwaveEventsExternalizerVersion}")
+    implementation("io.zenwave360.sdk:spring-modulith-events-scs:${property("zenwave-events-externalizer.version")}")
     implementation("com.fasterxml.jackson.dataformat:jackson-dataformat-avro")
     implementation("org.springframework.modulith:spring-modulith-starter-core")
     implementation("org.springframework.modulith:spring-modulith-starter-jdbc")
+    implementation("org.springframework.boot:spring-boot-jackson2")
 
     // MapStruct
     implementation("org.mapstruct:mapstruct:${property("mapstruct.version")}")
@@ -97,11 +101,21 @@ dependencies {
     // Swagger
     implementation("org.springdoc:springdoc-openapi-starter-webmvc-ui:${property("springdoc-openapi-starter-webmvc-ui.version")}")
 
-    // Test
+    // Test - JUnit Platform alignment
+    testImplementation(platform("org.junit:junit-bom:5.11.4"))
+    testImplementation("org.junit.jupiter:junit-jupiter")
+    testImplementation("org.junit.platform:junit-platform-launcher")
+
+    // Other test dependencies
     testImplementation("org.springframework.boot:spring-boot-starter-test")
     testImplementation("org.springframework:spring-webflux")
-    testImplementation("com.intuit.karate:karate-core:${property("karate.version")}")
-    testImplementation("org.testcontainers:junit-jupiter")
+    testImplementation("com.intuit.karate:karate-core:${property("karate.version")}") {
+        exclude(group = "org.junit.platform")
+        exclude(group = "org.junit.jupiter")
+    }
+    testImplementation("org.testcontainers:junit-jupiter:${property("testcontainers.version")}")
+    testImplementation("com.tngtech.archunit:archunit-junit5-api:${property("archunit-junit5.version")}")
+    testImplementation("com.tngtech.archunit:archunit-junit5-engine:${property("archunit-junit5.version")}")
 }
 
 kapt {
@@ -116,13 +130,13 @@ tasks.withType<Test> {
 // Make the compileKotlin task depend on openApiGenerate
 tasks.named("compileKotlin") {
     dependsOn("openApiGenerate")
-    dependsOn("generateAsyncApiDtos")
+//    dependsOn("generateAsyncApiDtos")
     dependsOn("generateAsyncApiProvider")
 }
 
 tasks.withType<org.jetbrains.kotlin.gradle.internal.KaptGenerateStubsTask> {
     dependsOn("openApiGenerate")
-    dependsOn("generateAsyncApiDtos")
+//    dependsOn("generateAsyncApiDtos")
     dependsOn("generateAsyncApiProvider")
 }
 
@@ -155,40 +169,24 @@ openApiGenerate {
 tasks.register<dev.jbang.gradle.tasks.JBangTask>("generateAsyncApiProvider") {
     group = "asyncapi"
     description = "Generates Spring Cloud Streams code from AsyncAPI specification"
-    script.set("io.zenwave360.sdk:zenwave-sdk-cli:RELEASE")
+    script.set("io.zenwave360.sdk:zenwave-sdk-cli:${ext["zenwave.version"]}")
     jbangArgs.set(listOf(
-        "--deps=org.slf4j:slf4j-simple:1.7.36,io.zenwave360.sdk.plugins:asyncapi-spring-cloud-streams3:RELEASE",
-        "--java-options \"--add-exports=jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED\"",
-        "--java-options \"--add-exports=jdk.compiler/com.sun.tools.javac.file=ALL-UNNAMED\"",
-        "--java-options \"--add-exports=jdk.compiler/com.sun.tools.javac.parser=ALL-UNNAMED\"",
-        "--java-options \"--add-exports=jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED\"",
-        "--java-options \"--add-exports=jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED\""
+        "--deps=" +
+            "org.slf4j:slf4j-simple:1.7.36," +
+            "io.zenwave360.sdk.plugins:asyncapi-generator:${ext["zenwave.version"]}," +
+            "org.apache.avro:avro-compiler:${ext["avro.version"]}"
     ))
     args.set(listOf(
-        "-p", "spring-cloud-streams3",
-        "apiFile=src/main/resources/public/apis/asyncapi.yml",
+        "-p", "AsyncAPIGenerator",
+        "apiFile=$asyncApiInputSpec",
         "targetFolder=${layout.buildDirectory.dir("generated-sources/zenwave").get().asFile.absolutePath}",
         "role=provider",
         "style=imperative",
         "transactionalOutbox=modulith",
-        "modelPackage=$asyncApiModelPackage",
+        // "modelPackage=$asyncApiModelPackage", // required for json-schema, here it uses avro package
         "producerApiPackage=$asyncApiProducerApiPackage",
-        "consumerApiPackage=$asyncApiConsumerApiPackage"
-    ))
-}
-
-tasks.register<dev.jbang.gradle.tasks.JBangTask>("generateAsyncApiDtos") {
-    group = "asyncapi"
-    description = "Generates Java classes from Avro schema files"
-    script.set("org.apache.avro:avro-tools:1.11.3")
-
-    args.set(listOf(
-        "compile", "schema",
-        "src/main/resources/public/apis/avro/PaymentMethodType.avsc",
-        "src/main/resources/public/apis/avro/PaymentMethod.avsc",
-        "src/main/resources/public/apis/avro/Address.avsc",
-        "src/main/resources/public/apis/avro/CustomerEvent.avsc",
-        "${layout.buildDirectory.dir("generated-sources/avro").get().asFile.absolutePath}"
+        "consumerApiPackage=$asyncApiConsumerApiPackage",
+        "avroCompilerProperties.imports=$asyncApiAvroImports"
     ))
 }
 
@@ -199,7 +197,6 @@ sourceSets {
         }
         java {
             srcDir(layout.buildDirectory.dir("generated-sources/zenwave/src/main/java").get().asFile)
-            srcDir(layout.buildDirectory.dir("generated-sources/avro").get().asFile)
         }
     }
     test {
